<resources>
    <string name="app_name">ViandSystem</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="pref_default_data_sync_backend_url">jdbc:aceql:http://192.168.55.1:9090/ServerSqlManager</string>
    <string name="output_shows_here">The first row from the SQL query shows up here</string>
    <string name="sql_input_hint">Enter an SQL query to execute. \nFor this test, it must be a select statement that returns only one string column!</string>
    <string name="execute">Search</string>
    <string name="loading">Loading…</string>
    <string name="sql_query_label">SQL Query</string>
    <string name="pc_url">Enter url for connecting to the Viand System database</string>
    <string name="server_url_hint">It is usually of the form:\n jdbc:aceql:http://server_ip_here:9090/ServerSqlManager</string>
    <string name="server_url_default">jdbc:aceql:http://192.168.0.100:9090/ServerSqlManager</string>
    <string name="error_occured">An error occurred: </string>
    <string name="see_log">Check the Android Log for more information.</string>
    <string name="no_result_sets">Received no result sets from query</string>


    <string name="action_settings">Settings</string>
    <string name="ask_for_amount">How Much Money do u Have on your Pocket ?</string>
    <string name="amount_in_rs">Amount in Rs.</string>
    <string name="details">Details of Hotels to be mentioned Here</string>
    <string name="enough_money">I am Rich.</string>
    <string name="admin_login">Admin_Login</string>
    <string name="homdel">I want to stay at my home</string>
    <string name="fbhname">I know my pick.</string>
    <string name="danc">Developer and Contributor</string>
    <string name="video">Have a tutorial on how this app works</string>
    <string name="pref_hotel">Enter any number of consecutive letters of your professional eatery. (Enter the full name if you remember)</string>
    <string name="goselproc">Help me Decide</string>
    <string name="log_cred">Please Enter your Login Credentials</string>
    <string name="login_hint">Enter your user name here</string>
    <string name="log_admin">Login as Administrator</string>
    <string name="orig_uname">Kaushik</string>
    <string name="orig_pass">dbms</string>
    <string name="auth_err">UserName and Password not found. Please try gain</string>
    <string name="log_succ">Login successful</string>
    <string name="hd_sel">Only Hotels with home delivery option will be showed</string>
    <string name="staff">Do you want to know about staff ?</string>
    <string name="transport">Do you want to know about Transport ?</string>
    <string name="hd_sel_n">Hotels with both home delivery and non Home Delivery option will be showed</string>
    <string name="icip">Initialize / Change IP</string>
    <string name="enh">Enter the name of the hotel</string>
    <string name="eidh">Enter ID here</string>
    <string name="ech">Enter Catgory here (restaurant,bakery,cafe)</string>
    <string name="erh">Enter the minimum range here</string>
    <string name="confail">Connection Failed. Please Check your IP</string>
    <string name="intro">Welcome to the Viand system for Manipal</string>
    <string name="intro2">In case you are hungry this is the perfect place to land</string>
    <string name="ask_mood">What is your mood ?</string>
    <string name="chli">List of Hotels for your choice</string>
</resources>
