<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/login"
            android:icon="@drawable/login"
            android:title="@string/admin_login" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/hodel"
            android:title="@string/homdel" />
        <item
            android:id="@+id/fbname"
            android:title="@string/fbhname" />
    </group>

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/dandc"
            android:title="@string/danc" />
        <item
            android:id="@+id/vid"
            android:icon="@android:drawable/presence_video_online"
            android:title="@string/video" />
    </group>

</menu>