<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior" tools:showIn="@layout/app_bar_main"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server_url_label"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <EditText
        android:id="@+id/et_server_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/server_url_hint"
        android:inputType="textMultiLine"
        android:text="@string/server_url_default"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sql_query_label"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_above="@+id/et_input"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/et_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sql_input_hint"
        android:inputType="textMultiLine"
        android:layout_above="@+id/b_execute"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/b_execute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/execute"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/tv_output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ripple_material_light"
        android:text="@string/output_shows_here"
        android:layout_below="@+id/b_execute"
        android:layout_alignParentStart="true" />


</RelativeLayout>
