<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/log_cred"
        android:textSize="40sp"
        android:textAlignment="center"
        android:id="@+id/textView7"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="44dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/log_uname"
        android:hint="@string/login_hint"
        android:textAlignment="center"
        android:textSize="25sp"
        android:layout_marginTop="79dp"
        android:layout_below="@+id/textView7"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/log_pass"
        android:layout_marginTop="74dp"
        android:layout_below="@+id/log_uname"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_admin"
        android:id="@+id/admin_login"
        android:layout_below="@+id/log_pass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="76dp" />
</RelativeLayout>